<resources>
    <string name="app_name">Event Manager</string>
    <string name="create">Create</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="app_description">Event management application, where you can register events, saving the name, location, date, description and a list of guests.You can also place an optional photo for the event. With the created event you can edit all the data and mark the guests that have confirmed their presence.</string>
    <string name="author_label">Author</string>
    <string name="author_name" translatable="false">Vinícius Macedo Noda</string>
    <string name="student_record">Student Record</string>
    <string name="student_record_number" translatable="false">1477870</string>
    <string name="course_name_label">Course</string>
    <string name="course_name">Computer Engineering</string>
    <string name="clear">Clear</string>
    <string name="manage_guets">Manage guests</string>
    <string name="add">add</string>
    <string name="new_guest">New guest</string>
    <string name="OK" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty_name_error">Please enter a name</string>
    <string name="alter">Alter name</string>
    <string name="delete">delete</string>
    <string name="empty_event_name">Please enter a name</string>
    <string name="empty_event_date">Please enter a date</string>
    <string name="empty_evet_location">Please enter a place</string>
    <string name="empty_event_description">Please enter a description</string>
    <string name="empty_event_guests">Please enter at least one guest</string>
    <string name="create_new_title">New Event</string>
    <string name="create_edit_title">Edit Event</string>
    <string name="edit">edit</string>
    <string name="create_btn_change">CHANGE</string>
    <string name="create_btn_create">CREATE</string>
    <string name="confirm_dialog_title">Delete Event?</string>
    <string name="confirm_dialog_body">Are you sure you want to delete the event</string>
    <string name="theme">Application theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="placeholder_text" translatable="false">placeholder</string>
    <string name="edit_guest">Edit guest</string>
    <string name="confirmed_question">Confirmed?</string>
    <string name="confirmed" formatted="false">%d/%d confirmed</string>
    <string name="select_image">Select image</string>
    <string name="event_image">event image</string>
    <string name="add_image">Add image</string>
    <string name="delete_event">Delete image</string>
    <string name="event_saved">Event saved</string>
    <string name="event_created">Event created</string>
    <string name="image_error">Error loading image</string>
    <plurals name="selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
</resources>
